<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/pref_categary_height" >

            <ImageView
                style="@style/pref_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_pref_elec"
            style="@style/pref_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pref_item_height" >

            <TextView
                style="@style/pref_text_key"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:text="@string/elec_alarm" />

            <TextView
                android:id="@+id/activity_pref_elec_info"
                style="@style/pref_text_summery"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/arrow_right" />

            <ImageView
                android:id="@id/arrow_right"
                style="@style/pref_arrow"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/pref_item_arrow_height"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

            <ImageView
                style="@style/pref_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_pref_net"
            style="@style/pref_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pref_item_height"
            android:visibility="gone" >

            <TextView
                style="@style/pref_text_key"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:text="@string/net_alram" />

            <TextView
                android:id="@+id/activity_pref_net_info"
                style="@style/pref_text_summery"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/arrow_right"
                android:text="" />

            <ImageView
                android:id="@id/arrow_right"
                style="@style/pref_arrow"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/pref_item_arrow_height"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

            <ImageView
                android:id="@+id/activity_pref_divider"
                style="@style/pref_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/pref_categary_height" >

            <ImageView
                style="@style/pref_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <RelativeLayout
           
            style="@style/pref_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pref_item_height" >

            <TextView
                style="@style/pref_text_key"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:text="@string/score_protect" />

            <CheckBox
               android:id="@+id/activity_pref_score_protect"
                style="@style/pref_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="right|center_vertical" />

            <ImageView
                android:id="@id/activity_pref_divider"
                style="@style/pref_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_pref_score_set_psword"
            style="@style/pref_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pref_item_height" >

            <TextView
                android:id="@+id/pref_set_score_textitem"
                style="@style/pref_text_key"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:textColor="#cecece"
                android:text="@string/score_psword_set" />

            <ImageView
                android:id="@id/arrow_right"
                style="@style/pref_arrow"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/pref_item_arrow_height"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

            <ImageView
                android:id="@id/activity_pref_divider"
                style="@style/pref_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <RelativeLayout
           
            style="@style/pref_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pref_item_height" >

            <TextView
                style="@style/pref_text_key"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:text="@string/score_change_push" />

            <CheckBox
                android:id="@+id/activity_pref_score_update_push"
                style="@style/pref_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

            <ImageView
                android:id="@id/activity_pref_divider"
                style="@style/pref_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/pref_categary_height" >

            <ImageView
                style="@style/pref_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <RelativeLayout
           
            style="@style/pref_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pref_item_height" >

            <TextView
                style="@style/pref_text_key"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:text="@string/wifi_auto_update" />

            <CheckBox
               android:id="@+id/activity_pref_wifi_update"
                style="@style/pref_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

            <ImageView
                android:id="@id/activity_pref_divider"
                style="@style/pref_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <RelativeLayout
           
            style="@style/pref_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pref_item_height" >

            <TextView
                style="@style/pref_text_key"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:text="@string/version_auto_update" />

            <CheckBox
                android:id="@+id/activity_pref_version_auto_update"
                style="@style/pref_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

            <ImageView
                android:id="@id/activity_pref_divider"
                style="@style/pref_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_pref_vaersion_info"
            style="@style/pref_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pref_item_height" >

            <TextView
                style="@style/pref_text_key"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:text="@string/vaersion_info" />

            <ImageView
                android:id="@id/arrow_right"
                style="@style/pref_arrow"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/pref_item_arrow_height"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

            <ImageView
                android:id="@id/activity_pref_divider"
                style="@style/pref_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/recruit_lottery"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pref_item_height"
            android:layout_marginTop="22dp">

            <ImageView
                style="@style/pref_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/pref_text_key"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:text="抽奖号" />

            <TextView
                android:id="@+id/recruit_lottery_num_pref"
                style="@style/pref_text_key"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="0dp"
                android:paddingRight="37dp"
                android:layout_alignParentRight="true"
                android:text="345678" />

            <ImageView
                style="@style/pref_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"/>
            </RelativeLayout>

        <Button
            android:id="@+id/activity_pref_exit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pref_item_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="@dimen/pref_categary_height"
            android:background="@drawable/pref_exit_button_bg"
            android:gravity="center"
            android:text="退出通行证帐号"
            android:textColor="@color/pref_exit_btn" />
    </LinearLayout>

</ScrollView>